--- a/iac/.env.sample
+++ b/iac/.env.sample
@@ -1,8 +1,10 @@
 # Where the admin key path exists
-export ADMIN_KEY_PATH=~/.ssh/deal buddy/admin
+export ADMIN_KEY_PATH=~/.ssh/deal-buddy/admin
 # What the inventory of hosts you want to run scripts against. This host should be specified in your ./hosts directory 
 export INVENTORY_PATH=./hosts/digitalOcean/production
 # What domain to use for exposing up web services. This one is mine
-export DOMAIN=deal-buddy.xyz
+export DOMAIN=leaky.krondor.org
+# MinIo volume path
+export MINIO_VOLUME_PATH=/mnt/brok_volume_nyc1_02
 # What email to use for publishing on web service certs. This one is mine
 export EMAIL=al@krondor.org
