--- a/requirements.txt
+++ b/requirements.txt
@@ -10,22 +10,80 @@ alembic==1.13.2
     # via -r requirements.in
 annotated-types==0.7.0
     # via pydantic
+anthropic==0.37.1
+    # via -r requirements.in
 anyio==3.7.1
-    # via starlette
+    # via
+    #   anthropic
+    #   httpx
+    #   starlette
+argon2-cffi==23.1.0
+    # via minio
+argon2-cffi-bindings==21.2.0
+    # via argon2-cffi
+certifi==2024.8.30
+    # via
+    #   httpcore
+    #   httpx
+    #   minio
+    #   requests
+cffi==1.17.1
+    # via
+    #   argon2-cffi-bindings
+    #   cryptography
+charset-normalizer==3.4.0
+    # via requests
 click==8.1.7
     # via uvicorn
+cryptography==43.0.3
+    # via python-jose
+distro==1.9.0
+    # via anthropic
+dnspython==2.7.0
+    # via email-validator
+ecdsa==0.19.0
+    # via python-jose
+email-validator==2.2.0
+    # via pydantic
 fastapi==0.112.0
+    # via
+    #   -r requirements.in
+    #   fastapi-login
+    #   fastapi-sso
+fastapi-login==1.10.2
     # via -r requirements.in
+fastapi-sso==0.15.0
+    # via -r requirements.in
+filelock==3.16.1
+    # via huggingface-hub
+fsspec==2024.10.0
+    # via huggingface-hub
 greenlet==3.1.1
     # via -r requirements.in
 h11==0.14.0
-    # via uvicorn
+    # via
+    #   httpcore
+    #   uvicorn
+httpcore==1.0.6
+    # via httpx
+httpx==0.27.2
+    # via
+    #   anthropic
+    #   fastapi-sso
+huggingface-hub==0.26.1
+    # via tokenizers
 idna==3.7
-    # via anyio
+    # via
+    #   anyio
+    #   email-validator
+    #   httpx
+    #   requests
 itsdangerous==2.1.2
     # via -r requirements.in
 jinja2==3.1.4
     # via -r requirements.in
+jiter==0.6.1
+    # via anthropic
 mako==1.3.5
     # via alembic
 markupsafe==2.1.5
@@ -33,18 +91,51 @@ markupsafe==2.1.5
     #   jinja2
     #   mako
     #   werkzeug
-pydantic==2.8.2
+minio==7.2.9
+    # via -r requirements.in
+oauthlib==3.2.2
+    # via fastapi-sso
+packaging==24.1
+    # via huggingface-hub
+pyasn1==0.6.1
+    # via
+    #   python-jose
+    #   rsa
+pycparser==2.22
+    # via cffi
+pycryptodome==3.21.0
+    # via minio
+pydantic[email]==2.8.2
     # via
     #   -r requirements.in
+    #   anthropic
     #   fastapi
+    #   fastapi-sso
 pydantic-core==2.20.1
     # via pydantic
+pyjwt==2.9.0
+    # via fastapi-login
+pypdf2==3.0.1
+    # via -r requirements.in
 pytailwindcss==0.2.0
     # via -r requirements.in
 python-dotenv==1.0.1
     # via -r requirements.in
+python-jose[cryptography]==3.3.0
+    # via -r requirements.in
+pyyaml==6.0.2
+    # via huggingface-hub
+requests==2.32.3
+    # via huggingface-hub
+rsa==4.9
+    # via python-jose
+six==1.16.0
+    # via ecdsa
 sniffio==1.3.1
-    # via anyio
+    # via
+    #   anthropic
+    #   anyio
+    #   httpx
 sqlalchemy==2.0.32
     # via
     #   -r requirements.in
@@ -53,14 +144,26 @@ starlette==0.37.2
     # via
     #   -r requirements.in
     #   fastapi
+tokenizers==0.20.1
+    # via anthropic
+tqdm==4.66.5
+    # via huggingface-hub
 typing-extensions==4.12.2
     # via
     #   aiosqlite
     #   alembic
+    #   anthropic
     #   fastapi
+    #   fastapi-login
+    #   huggingface-hub
+    #   minio
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
+urllib3==2.2.3
+    # via
+    #   minio
+    #   requests
 uvicorn==0.30.6
     # via -r requirements.in
 werkzeug==3.0.1
