--- a/requirements.txt
+++ b/requirements.txt
@@ -123,6 +123,8 @@ python-dotenv==1.0.1
     # via -r requirements.in
 python-jose[cryptography]==3.3.0
     # via -r requirements.in
+python-multipart==0.0.12
+    # via -r requirements.in
 pyyaml==6.0.2
     # via huggingface-hub
 requests==2.32.3
