--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ argon2-cffi==23.1.0
     # via minio
 argon2-cffi-bindings==21.2.0
     # via argon2-cffi
+black==24.10.0
+    # via -r requirements.in
 certifi==2024.8.30
     # via
     #   httpcore
@@ -34,7 +36,9 @@ cffi==1.17.1
 charset-normalizer==3.4.0
     # via requests
 click==8.1.7
-    # via uvicorn
+    # via
+    #   black
+    #   uvicorn
 cryptography==43.0.3
     # via python-jose
 distro==1.9.0
@@ -93,10 +97,18 @@ markupsafe==2.1.5
     #   werkzeug
 minio==7.2.9
     # via -r requirements.in
+mypy-extensions==1.0.0
+    # via black
 oauthlib==3.2.2
     # via fastapi-sso
 packaging==24.1
-    # via huggingface-hub
+    # via
+    #   black
+    #   huggingface-hub
+pathspec==0.12.1
+    # via black
+platformdirs==4.3.6
+    # via black
 pyasn1==0.6.1
     # via
     #   python-jose
@@ -146,6 +158,8 @@ starlette==0.37.2
     # via
     #   -r requirements.in
     #   fastapi
+tenacity==9.0.0
+    # via -r requirements.in
 tokenizers==0.20.1
     # via anthropic
 tqdm==4.66.5
