--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ anyio==3.7.1
     # via
     #   anthropic
     #   httpx
+    #   sse-starlette
     #   starlette
+    #   watchfiles
 argon2-cffi==23.1.0
     # via minio
 argon2-cffi-bindings==21.2.0
@@ -154,10 +156,13 @@ sqlalchemy==2.0.32
     # via
     #   -r requirements.in
     #   alembic
+sse-starlette==2.1.3
+    # via -r requirements.in
 starlette==0.37.2
     # via
     #   -r requirements.in
     #   fastapi
+    #   sse-starlette
 tenacity==9.0.0
     # via -r requirements.in
 tokenizers==0.20.1
@@ -181,6 +186,10 @@ urllib3==2.2.3
     #   minio
     #   requests
 uvicorn==0.30.6
+    # via
+    #   -r requirements.in
+    #   sse-starlette
+watchfiles==0.24.0
     # via -r requirements.in
 werkzeug==3.0.1
     # via -r requirements.in
