--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ aiosqlite==0.20.0
     # via -r requirements.in
 alembic==1.13.2
     # via -r requirements.in
+amqp==5.2.0
+    # via kombu
 annotated-types==0.7.0
     # via pydantic
 anthropic==0.37.1
@@ -23,7 +25,11 @@ argon2-cffi==23.1.0
     # via minio
 argon2-cffi-bindings==21.2.0
     # via argon2-cffi
+billiard==4.2.1
+    # via celery
 black==24.10.0
+    # via -r requirements.in
+celery==5.4.0
     # via -r requirements.in
 certifi==2024.8.30
     # via
@@ -40,7 +46,17 @@ charset-normalizer==3.4.0
 click==8.1.7
     # via
     #   black
+    #   celery
+    #   click-didyoumean
+    #   click-plugins
+    #   click-repl
     #   uvicorn
+click-didyoumean==0.3.1
+    # via celery
+click-plugins==1.1.1
+    # via celery
+click-repl==0.3.0
+    # via celery
 cryptography==43.0.3
     # via python-jose
 distro==1.9.0
@@ -90,6 +106,8 @@ jinja2==3.1.4
     # via -r requirements.in
 jiter==0.6.1
     # via anthropic
+kombu==5.4.2
+    # via celery
 mako==1.3.5
     # via alembic
 markupsafe==2.1.5
@@ -111,6 +129,8 @@ pathspec==0.12.1
     # via black
 platformdirs==4.3.6
     # via black
+prompt-toolkit==3.0.48
+    # via click-repl
 pyasn1==0.6.1
     # via
     #   python-jose
@@ -133,6 +153,8 @@ pypdf2==3.0.1
     # via -r requirements.in
 pytailwindcss==0.2.0
     # via -r requirements.in
+python-dateutil==2.9.0.post0
+    # via celery
 python-dotenv==1.0.1
     # via -r requirements.in
 python-jose[cryptography]==3.3.0
@@ -146,7 +168,9 @@ requests==2.32.3
 rsa==4.9
     # via python-jose
 six==1.16.0
-    # via ecdsa
+    # via
+    #   ecdsa
+    #   python-dateutil
 sniffio==1.3.1
     # via
     #   anthropic
@@ -181,6 +205,10 @@ typing-extensions==4.12.2
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
+tzdata==2024.2
+    # via
+    #   celery
+    #   kombu
 urllib3==2.2.3
     # via
     #   minio
@@ -189,7 +217,14 @@ uvicorn==0.30.6
     # via
     #   -r requirements.in
     #   sse-starlette
+vine==5.1.0
+    # via
+    #   amqp
+    #   celery
+    #   kombu
 watchfiles==0.24.0
     # via -r requirements.in
+wcwidth==0.2.13
+    # via prompt-toolkit
 werkzeug==3.0.1
     # via -r requirements.in
