--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -25,25 +25,10 @@ RUN /app/bin/install.sh
 # Copy the application code
 COPY src/ ./src/
 
-# Copy the alembic artifacts
-COPY alembic/ ./alembic/
-COPY alembic.ini ./alembic.ini
-
-# Copy the static assets
-COPY static/ ./static/
-
-# Copy the html templates
-COPY templates/ ./templates/
-
-# NOTE: you must set the DATABASE_PATH environment variable to the path to the database file
 # Create a startup script
 RUN echo '#!/bin/bash' > /app/start.sh && \
-    echo '/app/bin/migrate.sh' >> /app/start.sh && \
-    echo '/app/bin/run.sh' >> /app/start.sh && \
+    echo '/app/bin/run.sh --worker' >> /app/start.sh && \
     chmod +x /app/start.sh
 
-# Expose the port the app runs on
-EXPOSE 8000
-
 # Set the entrypoint to our startup script
-ENTRYPOINT ["/app/start.sh"]
+ENTRYPOINT ["/app/start.sh"] 
