--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,8 @@ cffi==1.17.1
     # via
     #   argon2-cffi-bindings
     #   cryptography
+cfgv==3.4.0
+    # via pre-commit
 charset-normalizer==3.4.0
     # via requests
 click==8.1.7
@@ -46,6 +48,8 @@ click==8.1.7
     #   uvicorn
 cryptography==43.0.3
     # via python-jose
+distlib==0.3.9
+    # via virtualenv
 distro==1.9.0
     # via anthropic
 dnspython==2.7.0
@@ -64,7 +68,9 @@ fastapi-login==1.10.2
 fastapi-sso==0.15.0
     # via -r requirements.in
 filelock==3.16.1
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   virtualenv
 fsspec==2024.10.0
     # via huggingface-hub
 greenlet==3.1.1
@@ -83,6 +89,8 @@ httpx==0.27.2
     #   fastapi-sso
 huggingface-hub==0.26.1
     # via tokenizers
+identify==2.6.2
+    # via pre-commit
 idna==3.7
     # via
     #   anyio
@@ -106,8 +114,14 @@ markupsafe==2.1.5
     #   werkzeug
 minio==7.2.9
     # via -r requirements.in
+mypy==1.13.0
+    # via -r requirements.in
 mypy-extensions==1.0.0
-    # via black
+    # via
+    #   black
+    #   mypy
+nodeenv==1.9.1
+    # via pre-commit
 oauthlib==3.2.2
     # via fastapi-sso
 packaging==24.1
@@ -118,9 +132,13 @@ packaging==24.1
 pathspec==0.12.1
     # via black
 platformdirs==4.3.6
-    # via black
+    # via
+    #   black
+    #   virtualenv
 pluggy==1.5.0
     # via pytest
+pre-commit==4.0.1
+    # via -r requirements.in
 pyasn1==0.6.1
     # via
     #   python-jose
@@ -156,7 +174,9 @@ python-jose[cryptography]==3.3.0
 python-multipart==0.0.12
     # via -r requirements.in
 pyyaml==6.0.2
-    # via huggingface-hub
+    # via
+    #   huggingface-hub
+    #   pre-commit
 redis[hiredis]==5.2.0
     # via
     #   -r requirements.in
@@ -165,6 +185,8 @@ requests==2.32.3
     # via huggingface-hub
 rsa==4.9
     # via python-jose
+ruff==0.7.3
+    # via -r requirements.in
 six==1.16.0
     # via ecdsa
 sniffio==1.3.1
@@ -198,6 +220,7 @@ typing-extensions==4.12.2
     #   fastapi-login
     #   huggingface-hub
     #   minio
+    #   mypy
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
@@ -209,6 +232,8 @@ uvicorn==0.30.6
     # via
     #   -r requirements.in
     #   sse-starlette
+virtualenv==20.27.1
+    # via pre-commit
 watchfiles==0.24.0
     # via -r requirements.in
 werkzeug==3.0.1
